Explored data a bit and reshaped NN

--- a/Explore Data.ipynb
+++ b/Explore Data.ipynb
@@ -50,7 +50,7 @@
     "assert os.path.isdir(msd_subset_path),'wrong path' # sanity check\n",
     "# path to the Million Song Dataset code\n",
     "# CHANGE IT TO YOUR LOCAL CONFIGURATION\n",
-    "msd_code_path='./data/MSD/MSongsDB'\n",
+    "msd_code_path='./'\n",
     "assert os.path.isdir(msd_code_path),'wrong path' # sanity check\n",
     "# we add some paths to python so we can import MSD code\n",
     "# Ubuntu: you can change the environment variable PYTHONPATH\n",
@@ -65,20 +65,29 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "('number of song files:', 10000)\n",
-      "('all artist names extracted in:', '0:01:19.778963')\n",
+      "('all artist names extracted in:', '0:01:07.010602')\n",
       "('found', 4412, 'unique artist names')\n",
-      "Groundhogs\n",
       "Pale Forest\n",
       "The Real Kids\n",
       "JennyAnyKind\n",
       "Little Willie John\n",
-      "('all artist names extracted (SQLite) in:', '0:00:00.029880')\n",
+      "Barry Goldberg\n",
+      "('all artist names extracted (SQLite) in:', '0:00:00.004701')\n",
       "!!!\n",
       "(hed) p.e.\n",
       "089 Clique feat. Minnesota Snipe & Skinny Cueball\n",
@@ -91,7 +100,7 @@
       "(u'AROIHOI122988FEB8E', 'has', 13, 'songs.')\n",
       "('SQL query:', u\"SELECT DISTINCT artist_name FROM songs WHERE artist_id='AROIHOI122988FEB8E'\")\n",
       "('name(s) of the most popular artist:', [u'Mario Rosenstock'])\n",
-      "('found most popular artist in', '0:00:00.063292')\n",
+      "('found most popular artist in', '0:00:00.018974')\n",
       "(u'AROIHOI122988FEB8E', u'Mario Rosenstock', 13)\n"
      ]
     }
@@ -247,7 +256,84 @@
     "conn.close()\n",
     "t2 = time.time()\n",
     "print('found most popular artist in',strtimedelta(t1,t2))\n",
-    "print(sorted(pop_artists,key=lambda x:x[2],reverse=True)[0])"
+    "print(sorted(pop_artists,key=lambda x:x[2],reverse=True)[0])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/MSD/MillionSongSubset/data/A/A/A/TRAAAPK128E0786D96.h5\n",
+      "((588, 12), 'Tweeterfriendly Music')\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = msd_subset_data_path + '/A/A/A/TRAAAPK128E0786D96.h5'\n",
+    "print(filename)\n",
+    "f = GETTERS.open_h5_file_read(filename)\n",
+    "print(GETTERS.get_segments_timbre(f).shape, GETTERS.get_artist_name(f))\n",
+    "a = GETTERS.get_segments_timbre(f)\n",
+    "np.savetxt(\"mfcc.csv\", a, delimiter=\",\")\n",
+    "\n",
+    "f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"track_ids.txt\", \"a\")\n",
+    "\n",
+    "def func_to_get_song_id(filename):\n",
+    "    h5 = GETTERS.open_h5_file_read(filename)\n",
+    "    track_id = GETTERS.get_track_id(h5)\n",
+    "    f.write(track_id+\"\\n\")\n",
+    "    h5.close()\n",
+    "    \n",
+    "apply_to_all_files(msd_subset_data_path, func=func_to_get_song_id)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_frames = 1000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func_to_get_time_frames(filename):\n",
+    "    global min_frames\n",
+    "    h5 = GETTERS.open_h5_file_read(filename)\n",
+    "    min_frames = min(GETTERS.get_segments_loudness_max(h5).shape[0], min_frames)\n",
+    "    h5.close()\n",
+    "    \n",
+    "apply_to_all_files(msd_subset_data_path, func=func_to_get_time_frames)\n",
+    "print(min_frames)"
    ]
   },
   {
@@ -260,9 +346,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "music-cs182",
+   "display_name": "music-182",
    "language": "python",
-   "name": "music-cs182"
+   "name": "music-182"
   },
   "language_info": {
    "codemirror_mode": {
@@ -274,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
