--- a/NN.ipynb
+++ b/NN.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +90,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/dhruv/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(1, 50)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,6 +116,57 @@
    "source": [
     "model = AudioCNNModel(num_frames, num_freq_bins, num_conv_filters_1, 4, kernel_size)\n",
     "model.net.predict(np.array([dummy_data])).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(588, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = np.loadtxt(open(\"mfcc.csv\", \"rb\"), delimiter=\",\")\n",
+    "print(sample.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.9806973e+01, -5.3713846e-01, -4.7246750e+01,  2.5584368e+01,\n",
+       "        -9.9681311e+00,  1.2044224e+01, -2.7165415e+01, -2.3274740e+01,\n",
+       "         1.6299646e+00, -1.4168367e+00,  1.4296337e+01,  1.9536862e+00,\n",
+       "        -2.7003475e+01,  9.3044968e+00, -3.7653595e-01, -3.0715734e+01,\n",
+       "         4.0956821e+01, -1.1072885e+01, -1.9723230e+01, -1.0651125e+01,\n",
+       "         3.1175880e+01,  1.3052781e+01, -8.3524621e-01, -1.4944993e+01,\n",
+       "        -5.1835122e+00, -2.2642338e+01, -3.1236853e+01,  1.3683222e+01,\n",
+       "         3.3727884e-02, -3.0168636e+01, -2.7883751e+01, -2.1144281e+01,\n",
+       "        -1.5089521e+00, -3.6744213e+01, -4.7313204e+00,  2.1528519e+01,\n",
+       "        -1.4222992e+01,  1.3659893e+01, -2.0891195e+01,  7.4002576e-01,\n",
+       "         1.3385822e+01, -2.2731121e+01,  4.0953937e+00,  1.6503340e+01,\n",
+       "         1.5168604e+01, -2.8626774e+01,  1.7193834e+01, -1.0743925e+01,\n",
+       "        -1.0019341e+01,  1.5123607e+01]], dtype=float32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = AudioCNNModel(588, 12, num_conv_filters_1, 4, kernel_size)\n",
+    "model.net.predict(np.array([sample]))"
    ]
   },
   {
@@ -125,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
