--- a/NN.ipynb
+++ b/NN.ipynb
@@ -2,25 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
+    "import keras\n",
     "from keras.models import Model\n",
     "from keras.layers import Conv1D, MaxPooling1D, Dense, Lambda, concatenate, Input, GlobalMaxPooling1D, GlobalAveragePooling1D\n",
     "import keras.backend as K\n",
-    "\n",
-    "\n"
+    "import pandas as pd\n",
+    "import json\n",
+    "import pickle\n",
+    "import random\n",
+    "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -51,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,25 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/dhruv/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(1, 50)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,58 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(588, 12)\n"
-     ]
-    }
-   ],
-   "source": [
-    "sample = np.loadtxt(open(\"mfcc.csv\", \"rb\"), delimiter=\",\")\n",
-    "print(sample.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1.3768783e+01,  5.3400726e+00,  1.7182302e+01,  4.7254562e-03,\n",
-       "         1.1371862e+01, -1.1489881e+01, -1.1623225e+01, -5.3368160e+01,\n",
-       "         2.8220667e+01,  2.1207111e+00,  3.0441160e+01, -2.2382311e+01,\n",
-       "         2.0941704e+01, -2.5579355e+01,  4.6951742e+00, -9.3095657e+01,\n",
-       "        -3.8151526e+00,  2.1477886e+01, -3.1216588e+00, -1.1774329e+01,\n",
-       "         3.5614014e+01,  7.8140297e+00, -1.8039911e+00, -1.8990763e+01,\n",
-       "         6.0609093e+01, -2.6195520e+01,  2.7206783e+01, -2.3290064e+01,\n",
-       "         1.4504442e+01, -2.5367855e+01, -6.3717075e+01,  1.2852405e+01,\n",
-       "        -1.7351482e+01,  1.2951219e+01, -2.1215942e+01,  4.4176807e+01,\n",
-       "         1.6976128e+01, -1.8742142e+01, -2.6397219e+00, -5.5945778e+01,\n",
-       "         8.1725750e+00, -2.6101841e+01,  4.0300927e+00, -4.7360023e+01,\n",
-       "        -7.8776133e-01,  5.5466011e+01, -1.3403375e+01, -3.0053848e+01,\n",
-       "         1.3307592e+01,  5.9734659e+00]], dtype=float32)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = AudioCNNModel(588, 12, num_conv_filters_1, 4, kernel_size)\n",
-    "model.net.predict(np.array([sample]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -183,41 +120,398 @@
     }
    ],
    "source": [
-    "f = open(\"chroma.npy\", \"rb\")\n",
-    "new_l = np.load(f)\n",
-    "print(new_l.shape)\n",
+    "f = open(\"data/chroma.npy\", \"rb\")\n",
+    "features = np.load(f)\n",
+    "print(features.shape)\n",
     "f.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-10.795193 , -22.549454 ,   9.735798 ,  -8.500256 ,  -5.311801 ,\n",
-       "          4.7889986, -25.51222  , -10.607115 ,   5.5248623,  -0.1869241,\n",
-       "         -5.0444384,   1.5588579,   1.2705004,   3.774472 ,   8.58127  ,\n",
-       "         -5.629212 , -10.317668 ,  33.51322  ,  -5.630941 , -17.618286 ,\n",
-       "         -6.794819 ,   2.2527916, -11.753466 ,  19.634468 ,  -9.071924 ,\n",
-       "         10.407949 ,   2.977954 ,  -7.0899405,  -7.902363 , -20.436295 ,\n",
-       "         -6.8034143, -17.229927 ,   4.1288157,  -1.3273693,   3.5205586,\n",
-       "        -11.960981 , -45.609367 , -14.118712 ,   1.3335799, -20.939522 ,\n",
-       "         18.94703  ,   8.75972  ,  -9.244462 , -13.868502 , -30.433079 ,\n",
-       "          8.901087 ,  -2.844258 ,   4.8732414,   1.0633532,  15.935471 ]],\n",
-       "      dtype=float32)"
+       "array([[  4.6740026 ,  -9.249433  ,  -1.3980534 ,  26.877184  ,\n",
+       "         -0.83539367, -16.137814  , -13.544751  ,  -0.743586  ,\n",
+       "        -13.395603  ,  -1.2896507 , -12.627663  ,  -3.1189494 ,\n",
+       "        -16.375254  ,   9.278057  ,  11.357858  ,  -6.0458646 ,\n",
+       "        -13.366302  , -28.689785  ,   9.980033  ,   1.921149  ,\n",
+       "         -0.8705852 ,  14.232031  ,  24.4798    ,  -5.9997387 ,\n",
+       "        -10.810645  ,  -4.9090867 ,  17.26567   , -33.375454  ,\n",
+       "         -6.5144606 ,   2.1467118 ,   9.165983  ,  27.146532  ,\n",
+       "          0.09802441, -18.815805  ,   4.780112  ,   6.260415  ,\n",
+       "         10.078434  ,   5.7494774 ,  11.292911  ,  -6.909471  ,\n",
+       "        -17.60566   , -16.109322  , -15.617443  ,   4.06311   ,\n",
+       "        -18.56289   , -35.05837   ,  17.217773  ,  13.385312  ,\n",
+       "         43.127274  ,  -0.63544846]], dtype=float32)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = AudioCNNModel(300, 12, num_conv_filters_1, 4, kernel_size)\n",
-    "model.net.predict(np.array([new_l[0]]))"
+    "model.net.predict(np.array([features[0]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/song-track-mapping.json', 'rb') as fp:\n",
+    "    song_track_mapping = json.load(fp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/track-song-mapping.json', 'rb') as fp:\n",
+    "    track_song_mapping = json.load(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRBBQGV12903CB5CD3 SOSIANM12AB018CC80\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(song_track_mapping['SOSIANM12AB018CC80'], track_song_mapping['TRBBQGV12903CB5CD3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.loc[df['song'] == 'SOSIANM12AB018CC80']['features'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.16932662, -0.08086438,  0.06148606, -0.04873373,  0.04393521,\n",
+       "        0.10009863, -0.01554874, -0.12346692, -0.04547898,  0.13980697,\n",
+       "        0.08787304, -0.18935911,  0.03744032,  0.12680109, -0.00610406,\n",
+       "       -0.0684809 , -0.04503168,  0.14103816,  0.01458193, -0.0455489 ,\n",
+       "        0.10926478, -0.03594866,  0.16459042,  0.08418246, -0.00514472,\n",
+       "        0.1974538 ,  0.15211657,  0.01583795, -0.01534751, -0.08645362,\n",
+       "       -0.04650037,  0.00193394,  0.02213042, -0.10820573, -0.01231078,\n",
+       "       -0.10624152, -0.1368499 ,  0.10162297, -0.15660124,  0.28276092,\n",
+       "        0.04303405,  0.06791999,  0.09406953,  0.01736024, -0.19946253,\n",
+       "        0.01771   , -0.04061035,  0.23670618, -0.02108839,  0.05780403])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('data/song_factors.pkl', 'rb') as f:\n",
+    "    song_factors_dict = pickle.load(f)\n",
+    "np.array(song_factors_dict['SOSIANM12AB018CC80'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "track_features_dict = {}\n",
+    "f = open(\"data/track_ids_for_chroma.txt\", \"r\")\n",
+    "counter = 0\n",
+    "for line in f:\n",
+    "    track_features_dict[line.strip()] = new_l[counter]\n",
+    "    counter += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.net.compile(loss=keras.losses.mean_squared_error, optimizer=keras.optimizers.Adam(lr=1e-5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "track_id_set = track_features_dict.keys()\n",
+    "song_id_set = list(song_factors_dict.keys())\n",
+    "count = 0\n",
+    "for song_id_key in song_id_set:\n",
+    "    if song_track_mapping[str(song_id_key)] not in track_id_set:\n",
+    "        count +=1\n",
+    "#         print(song_track_mapping[song_id_key])\n",
+    "        del song_factors_dict[song_id_key]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# song_factors_dict\n",
+    "keys = song_factors_dict.keys()\n",
+    "track_id_list = [song_track_mapping[key] for key in keys]\n",
+    "y = np.array([np.array(song_factors_dict[song_id]) for song_id in keys])\n",
+    "x = np.array([track_features_dict[track_id] for track_id in track_id_list])\n",
+    "# x = sklearn.preprocessing.normalize(x, norm='l2', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2188, 300, 12) (2188, 50)\n",
+      "Epoch 1/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 22.9020\n",
+      "Epoch 2/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 1.3049\n",
+      "Epoch 3/20\n",
+      "2188/2188 [==============================] - 18s 8ms/step - loss: 0.8773\n",
+      "Epoch 4/20\n",
+      "2188/2188 [==============================] - 16s 8ms/step - loss: 0.6837\n",
+      "Epoch 5/20\n",
+      "2188/2188 [==============================] - 16s 8ms/step - loss: 0.5637\n",
+      "Epoch 6/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.4798\n",
+      "Epoch 7/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.4159\n",
+      "Epoch 8/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.3654\n",
+      "Epoch 9/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.3263\n",
+      "Epoch 10/20\n",
+      "2188/2188 [==============================] - 16s 8ms/step - loss: 0.2930\n",
+      "Epoch 11/20\n",
+      "2188/2188 [==============================] - 22s 10ms/step - loss: 0.2659\n",
+      "Epoch 12/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.2438\n",
+      "Epoch 13/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.2254\n",
+      "Epoch 14/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.2079\n",
+      "Epoch 15/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.1921\n",
+      "Epoch 16/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.1796\n",
+      "Epoch 17/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.1662\n",
+      "Epoch 18/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.1579\n",
+      "Epoch 19/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.1492\n",
+      "Epoch 20/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.1397\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f3c3767a1d0>"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "xTrain, xTest, yTrain, yTest = train_test_split(x, y, test_size = 0.2, random_state = 0)\n",
+    "print(xTrain.shape, yTrain.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "2188/2188 [==============================] - 18s 8ms/step - loss: 0.0304\n",
+      "Epoch 2/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0279\n",
+      "Epoch 3/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0267\n",
+      "Epoch 4/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0256\n",
+      "Epoch 5/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0257\n",
+      "Epoch 6/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0249\n",
+      "Epoch 7/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0238\n",
+      "Epoch 8/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0225\n",
+      "Epoch 9/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0217\n",
+      "Epoch 10/20\n",
+      "2188/2188 [==============================] - 17s 8ms/step - loss: 0.0207\n",
+      "Epoch 11/20\n",
+      "2188/2188 [==============================] - 18s 8ms/step - loss: 0.0199\n",
+      "Epoch 12/20\n",
+      "2188/2188 [==============================] - 21s 9ms/step - loss: 0.0193\n",
+      "Epoch 13/20\n",
+      "2188/2188 [==============================] - 19s 9ms/step - loss: 0.0182\n",
+      "Epoch 14/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.0180\n",
+      "Epoch 15/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.0176\n",
+      "Epoch 16/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.0168\n",
+      "Epoch 17/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.0163\n",
+      "Epoch 18/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.0158\n",
+      "Epoch 19/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.0151\n",
+      "Epoch 20/20\n",
+      "2188/2188 [==============================] - 16s 7ms/step - loss: 0.0146\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f3c32afcac8>"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.net.fit(xTrain, yTrain, epochs=20, batch_size=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm_y = (np.linalg.norm(yTest)**2)/yTest.shape[0]\n",
+    "pred = model.net.predict(xTest)\n",
+    "norm_pred = (np.linalg.norm(pred)**2)/pred.shape[0]\n",
+    "norm_y_train = (np.linalg.norm(yTrain)**2)/yTrain.shape[0]\n",
+    "train_pred = model.net.predict(xTrain)\n",
+    "# norm_pred_train = (np.linalg.norm(train_pred)**2)/train_pred.shape[0]\n",
+    "# avg_loss_test = (np.linalg.norm(yTest-pred)**2)/yTest.shape[0]\n",
+    "# loss_train = np.linalg.norm(yTrain - train_pred)**2\n",
+    "# avg_loss_train = loss_train/yTrain.shape[0]\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average train loss 0.013648288253064815\n",
+      "average test loss 0.0902450124428803\n",
+      "average train norm 0.0017976001065020996\n",
+      "average test norm 0.0013229732227013138\n",
+      "average norm of predictions 0.013672692\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_loss_train = np.mean(np.square(train_pred - yTrain))\n",
+    "avg_loss_test = np.mean(np.square(pred - yTest))\n",
+    "avg_pred_norm = np.mean(np.square(train_pred))\n",
+    "norm_y_train = np.mean(np.square(yTrain))\n",
+    "norm_y = np.mean(np.square(yTest))\n",
+    "print(\"average train loss\",avg_loss_train)\n",
+    "print(\"average test loss\", avg_loss_test)\n",
+    "print(\"average train norm\",norm_y_train)\n",
+    "print(\"average test norm\",norm_y)\n",
+    "print(\"average norm of predictions\", avg_pred_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2735\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(list(song_factors_dict.keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "232.8407692922114\n"
+     ]
+    }
+   ],
+   "source": [
+    "norm_sum = 0.0\n",
+    "for song_id in song_factors_dict.keys():\n",
+    "    y = np.array(song_factors_dict[song_id])\n",
+    "    x = track_features_dict[song_track_mapping[str(song_id_key)]]\n",
+    "#     y_pred = model.net.predict(np.array([x]))\n",
+    "    norm_sum += np.linalg.norm(y)**2\n",
+    "print(norm_sum)"
    ]
   },
   {
