--- a/NN.ipynb
+++ b/NN.ipynb
@@ -516,6 +516,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_json = model.net.to_json()\n",
+    "with open('params/model_params_v0.json', \"w\") as f:\n",
+    "    f.write(model_json)\n",
+    "model.net.save_weights(\"params/model_params_v0.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
